--- a/locales/languages/ru.json
+++ b/locales/languages/ru.json
@@ -534,6 +534,29 @@
     "forget": "Забыть это устройство",
     "please_wait": "Пожалуйста, подождите..."
   },
+  //TODO: Max - update texts
+  "connect_hito_wallet": {
+    "title": "Подключите аппаратный кошелек на основе NFC",
+    "description1": "Подключите аппаратный кошелек с физически разделённым оборудованием, который общается через NFC.",
+    "description2": "Как это работает?",
+    "description3": "Вот официально поддерживаемые аппаратные кошельки с физически разделённым оборудованием:",
+    "keystone": "Hito Wallet",
+    "learnMore": "Подробнее",
+    "tutorial": "Руководство",
+    "description4": "Hito (руководство)",
+    "description5": "1. Разблокируйте свой Hito wallet",
+    "description6": "2. Нажмите на «Меню», затем выберите «Синхронизация» >",
+    "button_continue": "Продолжить",
+    "hint_text": "Отсканируйте свой кошелек Hito, чтобы",
+    "purpose_connect": "подключиться",
+    "purpose_sign": "подтвердить транзакцию",
+    "select_accounts": "Выберите счет",
+    "prev": "ПРЕДЫДУЩИЙ",
+    "next": "ДАЛЕЕ",
+    "unlock": "Разблокировать",
+    "forget": "Забыть это устройство",
+    "please_wait": "Пожалуйста, подождите..."
+  },
   "app_settings": {
     "title": "Настройки",
     "current_conversion": "Базовая валюта",
