--- a/locales/languages/ru.json
+++ b/locales/languages/ru.json
@@ -545,6 +545,38 @@
     "forget": "Забыть это устройство",
     "please_wait": "Пожалуйста, подождите..."
   },
+  "connect_hito_wallet": {
+    "title": "Подключите аппаратный кошелек на основе QR-кодов",
+    "description1": "Подключите аппаратный кошелек с физически разделённым оборудованием, который общается через QR-коды.",
+    "description2": "Как это работает?",
+    "description3": "Вот официально поддерживаемые аппаратные кошельки с физически разделённым оборудованием:",
+    "hito": "Hito Wallet",
+    "learnMore": "Подробнее",
+    "tutorial": "Руководство",
+    "description4": "Hito (руководство)",
+    "description5": "1. Разблокируйте свой Hito",
+    "description6": "2. Нажмите на «Меню», затем выберите «Синхронизация» >",
+    "button_continue": "Продолжить",
+    "hint_text": "Отсканируйте свой кошелек Hito, чтобы",
+    "purpose_connect": "подключиться",
+    "purpose_sign": "подтвердить транзакцию",
+    "select_accounts": "Выберите счет",
+    "prev": "ПРЕДЫДУЩИЙ",
+    "next": "ДАЛЕЕ",
+    "unlock": "Разблокировать",
+    "forget": "Забыть это устройство",
+    "please_wait": "Пожалуйста, подождите...",
+    "transaction": {
+      "title": "Подтвердите транзакцию",
+      "desc": "Пожалуйста, подтвердите, что вы видите ту же транзакцию на своем аппаратном кошельке",
+      "amount": "Сумма",
+      "from": "От",
+      "sign": "Подписать транзакцию",
+      "openNFC": "Открыть NFC-соединение",
+      "cancel": "Отмена",
+      "confirm": "Confirm with Hito Wallet"
+    }
+  },
   "app_settings": {
     "title": "Настройки",
     "current_conversion": "Базовая валюта",
